Thu Dec  1 15:07:49 CET 2011 (tk)
---------------------------------
 * libclamav/readdb.c: allow comments in all db files (bb#3930)

Tue Nov 22 19:07:47 CET 2011 (acab)
-----------------------------------
 * libclamav/io9660.c: properly dump to temp file

Fri Nov 18 15:23:50 CET 2011 (tk)
---------------------------------
 * libclamav/scanners.c: use lsigs when scanning vba data (bb#3922)

Fri Nov 18 15:48:59 EET 2011 (edwin)
-----------------------------------
 * libclamav/matcher-hash.c: Fix SIGBUS on PA-RISC (big-endian) architectures (bb #3894).

Wed Nov 16 15:57:24 CET 2011 (tk)
---------------------------------
 * clamd: initial support for on-access scanner using fanotify (bb#2236)

Mon Nov 14 21:22:26 CET 2011 (acab)
-----------------------------------
 * libclamav: add preliminary support for iso9660 image files

Fri Nov  4 00:52:21 CET 2011 (acab)
-----------------------------------
 * libclamav/pe.c: parse vinfo where varfileinfo occours before stringfileinfo
		   (bb#3062)

Mon Oct 10 14:41:48 CEST 2011 (tk)
----------------------------------
 * freshclam/manager.c: fix error when compiling without DNS support (bb#3056)

Sat Oct  8 12:19:49 EEST 2011 (edwin)
-------------------------------------
 * libclamav/pdf.c: flag and dump PDF objects with /Launch (bb #3514)

Sat Oct  8 12:10:13 EEST 2011 (edwin)
-------------------------------------
 * libclamav/bytecode.c,bytecode_api.c: fix recursion level crash (bb #3706).

Mon Sep 19 13:44:36 CEST 2011 (tk)
----------------------------------
 * freshclam: re-enable short-time blacklisting of mirrors on
	      connection errors

Fri Sep 16 16:17:52 CEST 2011 (tk)
----------------------------------
 * freshclam: disable load balancing in further download attempts

Fri Sep 16 12:47:10 CEST 2011 (acab)
------------------------------------
 * libclamav: properly pass custom flag to sigload_cb
 * c4w: honor custom sigs in mindefs
   (bb#3509 + bb#3510)

Thu Sep 15 14:44:11 CEST 2011 (tk)