@@ -1,3 +1,7 @@
+Fri Dec  9 16:41:05 CET 2011 (tk)
+---------------------------------
+ * libclamav/matcher.c: add new offset modifier SEx (bb#4008)
+
 Thu Dec  1 15:07:49 CET 2011 (tk)
 ---------------------------------
  * libclamav/readdb.c: allow comments in all db files (bb#3930)
